--- a/copy.css
+++ b/copy.css
@@ -1,3 +1,3 @@
-.copyright {position: absolute; color: #ffffff; bottom: 2px; right: 2px; }
+.copyright {font-size: 25; position: absolute; color: #ffffff; bottom: 2px; right: 2px; text-shadow: black 1px 0px 5px;}
 .IMGcontainer {position: relative; float:left;}
 .IMGBlock {display: block;}
